--- a/templates/user.htm
+++ b/templates/user.htm
@@ -15,6 +15,13 @@ $(function(){
 });
 
 </script>
+<style>
+#my_status {padding-bottom:0px;}
+#update_status_button {margin-bottom:0px;}
+#me_done_button { display:inline-block; margin-bottom:0px }
+.alert-actions {padding-bottom:6px;}
+</style>
+
 {% endblock %}
 
 {% block header %}
@@ -27,7 +34,7 @@ $(function(){
 
 {% block main %}
 {% if user_to_view %}
-	<div class="alert-message block-message success">
+	<div class="alert-message block-message success" id="my_status">
 		{% if events %}
 			{% for event in events %}
 				{% include "event_snip.htm" %}
@@ -38,14 +45,13 @@ $(function(){
 	<div class="alert-actions">
 	{% if user_is_me %}
 		{% if events %}
-		<form style="display:inline-block" action="/user/{{user.username}}/closeout" method="post">
+		<form id="me_done_button" action="/user/{{user.username}}/closeout" method="post">
 			<input class="btn" type="submit" value="I am done" />
 		</form>
 		{% endif %}
-		<a class="btn" href="/add">Update My Status</a>
+		<a class="btn" id="update_status_button" href="/add">Update My Status</a>
 	{% endif %}
 	</div>
-
 	</div>
 
 	{% if old_events %}
