--- a/templates/add_event.htm
+++ b/templates/add_event.htm
@@ -2,6 +2,9 @@
 
 
 {% block nav%}
+<li ><a href="#">></a></li>
+<li id="nav_post"><a href="/add">Update Status</a></li>
+
 {% endblock %}
 
 {% block header %}
