--- a/templates/base.htm
+++ b/templates/base.htm
@@ -103,10 +103,9 @@
         <div class="container">
           <a class="brand" href="/">WorkWithMe</a>
           <ul class="nav">
-			<li id="nav_browse"><a href="/browse">Browse</a></li>
-			<li id="nav_post"><a href="/add">I am at...</a></li>
+			<li id="nav_browse"><a href="/browse">Everyone</a></li>
 			{% if user %}
-			<li id="nav_me"><a href='/user/{{username}}'>I am awesome</a></li>
+			<li id="nav_me"><a href='/user/{{username}}'>Me</a></li>
 			{% endif %}
 			
 	
