--- a/templates/base.htm
+++ b/templates/base.htm
@@ -134,8 +134,10 @@
         </div>
         <div class="row">
           <div class="span10">
+			<div style="margin-right:20px">
 			{% block main %}
 			{% endblock %}
+			</div>
           </div>
           <div class="span4">
 			{% block right_col %}
