--- a/templates/base.htm
+++ b/templates/base.htm
@@ -104,7 +104,7 @@
           <a class="brand" href="/">WorkWithMe</a>
           <ul class="nav">
 			<li id="nav_browse"><a href="/browse">Everyone</a></li>
-			{% if user %}
+			{% if user and username %}
 			<li id="nav_me"><a href='/user/{{username}}'>Me</a></li>
 			{% endif %}
 			
