--- a/templates/browse_all.htm
+++ b/templates/browse_all.htm
@@ -170,6 +170,14 @@ $(function () {
 	<button class="btn primary">Update Your Status</button>
 </a>
 {% endif %}
+
+<hr/>
+<!-- // MAILCHIMP SUBSCRIBE CODE \\ -->
+<a href="http://eepurl.com/hBCt-/">
+	<button class="btn">Subscribe to our Newsletter!</button>
+</a>
+<!-- \\ MAILCHIMP SUBSCRIBE LINK // -->
+
 <hr/>
 <div class="status">
 <div id="map_success" class="alert-message hidden success"></div>
