Fixed time issue

--- a/templates/add_event.htm
+++ b/templates/add_event.htm
@@ -212,6 +212,7 @@
     <input type="hidden" id="when_start" name="when_start" value='now' placeholder="start time"></input>
     until
     <input type="text" id="when_end" name="when_end" placeholder="1pm"></input>
+	<div class="alert-message error hide" id="when_end_error"></div>
     .
 	</div>
 	<div id="when_end_error" class="hide alert-message error"></div>
