--- a/templates/add_event.htm
+++ b/templates/add_event.htm
@@ -15,17 +15,18 @@
 {% block head %}
     <!-- Google MAPS API -->
     <style type="text/css">
-        #map_canvas { height: 200px; width:100%; }
+        #map_canvas { height: 300px; width:100%; }
 		.find_step {margin-bottom:4px;margin-top:4px}
 		#map_success h3 {color:white;font-size:10pt;}
 		.find_step input {width:100%}
-		#where {width:435px;}
+		#where {width:344px;}
 		#searchBtn {width:80px}
-		#searchResults { overflow: scroll; height:70px; padding: 4px; margin-top:4px}
+		#searchResults { overflow: scroll; max-height:120px; padding: 4px; margin-top:4px}
 		#searchResults ul { list-style-type: none; margin-left: 2px;}
 		#searchResults ul>li { margin-top:2px;}
-		#searchResults .btn { margin:1px; padding:1px 2px 1px 2px}
+		#searchResults .btn { padding:1px 2px 1px 2px}
 		#searchResults .address {margin-left:5px;}
+		#searchResults .pickme{ width:13%}
 		#findMeBtn {float:right;}
 
 		.alert-message li{ color:white; }
@@ -42,6 +43,7 @@
 		
 		.find_loc_btn { float:right; margin-right:40px;}
         .step {margin-top:4px;}
+		.gray { color:gray;}
 		</style>
     <!--
     <script type="text/javascript"
@@ -82,79 +84,70 @@
 		$("#nav_post").addClass( "active");
 
 	    $("#do_submit").click( do_submit );
-
-		$('#map-overlay').bind('shown', function () {
-		  $("#searchResults").hide();
-
+		
+		
 		// Initialize map buttons	
 	    $("#searchBtn").click( function () {
 	        searchFnc();
 	    });
+
 		$("#where").keydown( function(event){
 			if (event.keyCode == '13') {
 				searchFnc();
 			}
 		});
-
-		  init_map_stuff();
-		  findMeForAdd();
-		})
+		
+		$('#find_loc_button').click( function(){
+			showFindPlace( true, function(){
+				init_map_stuff();
+			  	findMeForAdd();				
+			} );
+		  
+		});
 		
 		$('#btn_map_note_here').click( function(){
 			applyMyNewPosition();
-			$('#map-overlay').modal( 'hide' );
+			showFindPlace( false );
+			
 			$( "#address_box_error" ).slideUp( 'fast');
 		});
 
 		$('#btn_map_cancel').click( function(){
-			$('#map-overlay').modal( 'hide' );
+			showFindPlace( false );
 		});
+		
 		
 	});
 
+	function showFindPlace( do_show, func ){
+		var s = "#add_step", 
+			h = "#find_place";
+			
+		if( do_show ){
+			s = "#find_place";
+			h = "#add_step";
+		}
+		
+		console.log
+		$( h ).slideUp( 'slow', function(){
+		 	$( s ).slideDown( 'slow', func );
+		});
+		
+	}
 	</script>
 {% endblock %}
 
 {% block right_col %}
-<h3>Dassit!'</h3>
+<div class="gray">
+	Tell the world what you are working on, where, when, and who you would like to sit next to.  
+	And you never know who might join. If you are a designer, perhaps you want to sit next to developers?
+	If you are doing a startup, perhaps you would want to sit next to lawyers?  Put whatever...  
+</div>
 {% endblock %}
 
 {% block main %}
 
-<div id="map-overlay" class="modal hide fade" style="display: none; ">
-            <div class="modal-header">
-              <a href="#" class="close">×</a>
-            </div>
-            <div class="modal-body">
-				<div><button class='btn' name='findMeBtn' id='findMeBtn' value='Find Me' onclick='findMeForAdd()'>Find Me Again!</button> </div>
 
-		        <div id="map_canvas" ></div>
-				<div id="map_success" class="alert-message success hidden"></div>
-				<div id="map_working"  class="alert-message info hidden "></div>
-				<div id="map_error"  class="alert-message error hidden"></div>
-				
-				<div class="find_step" >
-					2.  Search for the place/address where you are:<br/>
-			        <input type="text" id="where" name="where" placeholder="Click to search for an address or a place..." />
-					<button class="btn" name="searchBtn" id="searchBtn" value="Search">Search</button>
-			        <div id="searchResults" class="alert-message block-message info"></div>
-				</div>
-				<div class="find_step hidden" id="step_confirm">
-					3.  Confirm the location:
-					<br/>
-			        <input type="text" id="new_where_name" name="new_where_name" placeholder="Name of this venue" value="name of the place" />
-			        <br/>
-					<input type="text" id="new_where_addr" name="new_where_addr" placeholder="Address" value="address"  />
-				</div>
-				<input type="hidden" id="new_loc_geopt_lat" name="new_loc_geopt_lat"></input>
-				<input type="hidden" id="new_loc_geopt_lng" name="new_loc_geopt_lng"></input>
-				
-            </div>
-            <div class="modal-footer">
-              <a href="#" class="btn primary" id="btn_map_note_here">Found Me!</a>
-              <a href="#" class="btn secondary" id="btn_map_cancel">Nevermind...</a>
-            </div>
-          </div>
 
 
 <div class="statement" id="add_step">
@@ -182,9 +175,9 @@
 		<div id="who_name_error" class="hide alert-message error"></div>
 	</div>	
 	
-	<div class="step">
+	<div class="step" >
 	    I'll be at 
-		<button data-controls-modal="map-overlay" data-backdrop="true" data-keyboard="true" class="btn find_loc_btn">Find Location</button>
+		<button class="btn find_loc_btn" id="find_loc_button">Find Location</button>
 
 		<div class="address_box well">
 			<input type="text" class="wide place_name" id="where_name" name="where_name" value="{{old_event.place.place_name}}" readonly />
@@ -192,8 +185,8 @@
 			<input type="text" class="wide place_address" id="where_addr" name="where_addr" value="{{old_event.where_addr}}" readonly/>
 			<div id="address_box_error" class="hide alert-message error" style="margin-bottom:0"></div>
 		</div>
-
 	</div>
+	
 
 	<div class="step">
 	    I'll be <input type="text" class="wide" id="where_detail" name="where_detail" placeholder="stuck between a piano and a barista" value="{{old_event.where_detail}}" />.
@@ -238,6 +231,33 @@
 </div>
 <div id="out_str"></div>
 
+
+<div id="find_place" class="hide" style="display: none; ">
+	<div class="find_step" >
+		1.  Search for the place/address where you are:<br/>
+        <input type="text" id="where" name="where" placeholder="Click to search for an address or a place..." />
+		<button class="btn" name="searchBtn" id="searchBtn" value="Search">Search</button>
+		<button class='btn' name='findMeBtn' id='findMeBtn' value='Find Me' onclick='findMeForAdd()'>Find Me Again!</button>
+	</div>
+    <div id="map_canvas" ></div>
+	<div id="map_success" class="alert-message success hidden"></div>
+	<div id="map_working"  class="alert-message info hidden "></div>
+	<div id="map_error"  class="alert-message error hidden"></div>
+    <div id="searchResults" class="hidden"></div>
+
+	<div class="find_step hidden" id="step_confirm">
+		3.  Confirm the location:
+		<br/>
+        <input type="text" id="new_where_name" name="new_where_name" placeholder="Name of this venue" value="name of the place" />
+        <br/>
+		<input type="text" id="new_where_addr" name="new_where_addr" placeholder="Address" value="address"  />
+	</div>
+	<input type="hidden" id="new_loc_geopt_lat" name="new_loc_geopt_lat"></input>
+	<input type="hidden" id="new_loc_geopt_lng" name="new_loc_geopt_lng"></input>
+
+           <a href="#" class="btn primary" id="btn_map_note_here">Found Me!</a>
+           <a href="#" class="btn secondary" id="btn_map_cancel">Nevermind...</a>
+ </div>
 
 
 <hr/>
