Fixed a bunch of crap

--- a/templates/browse2.htm
+++ b/templates/browse2.htm
@@ -64,11 +64,8 @@
 		<button class="btn primary">Update Your Status</button>
 	</a>
 {% else %}
-<a href="/add">
-	<button class="btn primary">Update Your Status</button>
-</a>
 <p style="margin-top:5px">
-So that people who are interested in what you do can sit next to you and work on their stuff. <a href="/about">Find out more...</a>	
+See where everyone is or post your status so that you people know where you are... <a href="/about">Find out more...</a>	
 </p>
 {% endif %}
 
