--- a/templates/event_snip.htm
+++ b/templates/event_snip.htm
@@ -18,7 +18,11 @@
 		{% else %}
 		<a href="/place/{{event.place.lat}}/{{event.place.lon}}/{{event.place.place_name}}">
 		{% endif %}
-		{{event.place.place_name}}</a></span>
+			{% if event.place.place_name %}
+				{{event.place.place_name}}</a></span>
+			{% else %}
+				{{event.where_addr}}</a></span>
+			{% endif %} 
 <!--
         from 
         <span class='item_prop adjust_date'>{{event.when_start}}</span>
