--- a/templates/browse2.htm
+++ b/templates/browse2.htm
@@ -12,6 +12,8 @@
 
 
 {% block head %}
+<meta name="description" content="WorkWithMe helps people cowork.  Say you wake up and think 'Wouldn't it be great to work next to some web developers/lawyers/designers/etc.?'...  " />
+
 <style>
 	#map_canvas { height: 300px; width:100%; }
 
