Another copy modification.

--- a/templates/browse2.htm
+++ b/templates/browse2.htm
@@ -12,7 +12,7 @@
 
 
 {% block head %}
-<meta name="description" content="WorkWithMe helps people cowork.  Say you wake up and think 'Wouldn't it be great to work next to some web developers/lawyers/designers/etc.?'...  " />
+<meta name="description" content="Work next to people you like.  Why?  Let's say you want to work on your own project, but you would like to be next to designers, or lawyers, or poets..." />
 
 <style>
 	#map_canvas { height: 300px; width:100%; }
